JVM params were useless